# chargectl

./: .build.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
extra/: chargectl.service
src/: cli.rs  daemon.rs  error.rs  main.rs  sysfs.rs  threshold.rs
src/cli/: app.rs  mod.rs
src/system/: mod.rs  threshold.rs
