[package]
name = "chargectl"
version = "0.1.0"
authors = ["Dan Bond <danbond@protonmail.com>"]
description = "Linux daemon for managing charge thresholds on modern laptop machines"
rust-version = "1.72"
edition = "2021"
repository = "https://github.com/loshz/chargectl"
license = "MIT"

[dependencies]
clap = { version = "4.4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
