[package]
name = "chargectl"
version = "0.1.0"
authors = ["Dan Bond <danbond@protonmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "Manage charge thresholds on modern Linux machines"
repository = "https://git.sr.ht/~loshz/chargectl"
license = "MIT"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
